add image on page

--- a/index.html
+++ b/index.html
@@ -35,13 +35,23 @@
     <div class="container">
 
       <div class="row row1">
-        <div class="img-box">Imagebox</div>
-        <div class="text-box">Textbox</div>
+        <div class="img-box">
+          <img src="./img/pexels-david-bartus-1131407.jpg" alt="flower garden">
+        </div>
+        <div class="text-box">
+          <h3 class="lg-heading"> DEGANVY,U.K</h3>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum deserunt provident repudiandae quas quod optio, nostrum atque omnis neque odit maxime sit saepe ex nesciunt minima nihil! Saepe, sunt est.</p>
+        </div>
         </div>
 
     <div class="row row2">
-      <div class="img-box">imagebox</div>
-        <div class="text-box">textbox</div>
+      <div class="img-box">
+        <img src="./img/damiano-baschiera-hFXZ5cNfkOk-unsplash.jpg">
+      </div>
+        <div class="text-box">
+          <h3 class="lg-heading">DESERT,EGYPT</h3>
+          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Velit nesciunt magnam, eius ab nostrum eaque, veritatis consequuntur optio a perspiciatis atque quo deserunt, architecto qui sunt modi culpa voluptatibus hic.</p>
+        </div>
         </div>
     </div>
   </section>
