adding  more button on text-box area

--- a/index.html
+++ b/index.html
@@ -39,8 +39,9 @@
           <img src="./img/pexels-david-bartus-1131407.jpg" alt="flower garden">
         </div>
         <div class="text-box">
-          <h3 class="lg-heading"> DEGANVY,U.K</h3>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum deserunt provident repudiandae quas quod optio, nostrum atque omnis neque odit maxime sit saepe ex nesciunt minima nihil! Saepe, sunt est.</p>
+          <h3 class="lg-heading text-black"> DEGANVY,U.K</h3>
+          <p classs="text-grey">Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum deserunt provident repudiandae quas quod optio, nostrum atque omnis neque odit maxime sit saepe ex nesciunt minima nihil! Saepe, sunt est.</p>
+          <a href="./about.html" class="btn btn-secondary">About More</a>
         </div>
         </div>
 
@@ -49,8 +50,10 @@
         <img src="./img/damiano-baschiera-hFXZ5cNfkOk-unsplash.jpg">
       </div>
         <div class="text-box">
-          <h3 class="lg-heading">DESERT,EGYPT</h3>
-          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Velit nesciunt magnam, eius ab nostrum eaque, veritatis consequuntur optio a perspiciatis atque quo deserunt, architecto qui sunt modi culpa voluptatibus hic.</p>
+          <h3 class="lg-heading  text-black">DESERT,EGYPT</h3>
+          <p class="text-grey">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Velit nesciunt magnam, eius ab nostrum eaque, veritatis consequuntur optio a perspiciatis atque quo deserunt, architecto qui sunt modi culpa voluptatibus hic.</p>
+          <a href="./about.html" class="btn btn-secondary
+          ">About More</a>
         </div>
         </div>
     </div>
