features of the webpage

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./css/style.css" />
+    <script src="https://kit.fontawesome.com/173bd74bb1.js" crossorigin="anonymous"></script>
     <title>TRAVEL WEBSITE | WELCOME</title>
   </head>
   <body>
@@ -44,7 +45,7 @@
           <a href="./about.html" class="btn btn-secondary">About More</a>
         </div>
         </div>
-
+<!-- showcase -->
     <div class="row row2">
       <div class="img-box">
         <img src="./img/damiano-baschiera-hFXZ5cNfkOk-unsplash.jpg">
@@ -56,6 +57,31 @@
           ">About More</a>
         </div>
         </div>
+    </div>
+  </section>
+<!-- after showcase style  -->
+  <section class="features">
+    <div class="container">
+
+      <div class="box-wrapper">
+  
+        <div class=" box box-1">
+          <i class="fa-solid fa-route fa-2x text-red "></i>
+          <h2 class="md-heading">Adventurous</h2>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero itaque assumenda voluptatem iusto minus enim voluptates dicta quo eaque expedita?</p>
+        </div>
+        <div class=" box  box-2">
+          <i class="fa-solid fa-strikethrough  fa-2x  "></i>
+          <h2 class="md-heading">Less price</h2>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus error alias corporis, maxime quos perferendis sed. Eos ad suscipit voluptas?</p>
+        </div>
+        <div class=" box box-3">
+          <i class="fa-solid fa-user-check  fa-2x text-red"></i>
+          <h2 class="md-heading">Experinence</h2>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi, commodi veritatis. Aliquid modi quas a. Provident dolore fugit nobis officiis.</p>
+        </div>
+  
+      </div>
     </div>
   </section>
   </body>
