--- a/index.html
+++ b/index.html
@@ -84,5 +84,16 @@
       </div>
     </div>
   </section>
+<!-- #######footer section####### -->
+<footer class="footer">
+  <div class="social-media-links">
+    <i class="fa-brands fa-facebook  fa-4x"></i>
+    <i class="fa-brands fa-twitter fa-4x"></i>
+    <i class="fa-brands fa-instagram  fa-4x"></i>
+  </div>
+
+  <p> World travel &copy;2022,All Right Reserved</p>
+</footer>
+
   </body>
 </html>
