--- a/index.html
+++ b/index.html
@@ -27,12 +27,12 @@
       <div class="header-content">
         <h1 class="lg-heading text-light"> Explore the world</h1>
         <p  class="text-light"> Explore the world of your own eyes,explain it better. it's the best gift of nature</p>
-        <a href="#"  class=" btn  btn-primary text-red md-heading">Explore places</a>
+        <a href="#explore-places"  class=" btn  btn-primary text-red md-heading">Explore places</a>
           
       </div>
 
     </header>
-  <section class="showcase">
+  <section class="showcase" id="explore-places">
     <div class="container">
 
       <div class="row row1">
