--- a/about.html
+++ b/about.html
@@ -12,75 +12,73 @@
     <title>TRAVEL WEBSITE | WELCOME</title>
   </head>
   <body>
-    <nav class="nav-bar  bg-dark">
+    <nav class="nav-bar bg-dark">
       <div class="container">
-
-        <h1 class="logo  lg-heading text-red">Travel World</h1>
-        <ul class="nav-item" >
-        
-         
-          <li class="nav-item"><a href="./contact.html">CONTACT </a></li>
+        <h1 class="logo lg-heading text-red">Travel World</h1>
+        <ul class="nav-items">
+          <li class="nav-item"><a href="./index.html">HOME</a></li>
           <li class="nav-item"><a href="./about.html">ABOUT</a></li>
-          <li class="nav-item"><a href="./index.html">HOME</li>
+          <li class="nav-item"><a href="./contact.html">CONTACT </a></li>
         </ul>
       </div>
     </nav>
 
     <section class="about">
       <div class="container">
-
-        <h2 class="lg-heading  text-black  about-heading">About Us</h2>
-        <p class="text-grey">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatem suscipit quas magni eos ipsam omnis voluptas voluptatum id, reiciendis doloribus!</p>
-         <div class="about-wrapper">
-            <div class="left">
-               <ul>
-                  <li>Lorem ipsum dolor sit.</li>
-                  <li>Lorem ipsum dolor sit.</li>
-                 <li>Lorem ipsum dolor sit.</li>
-                 </ul>
-            </div>
-            <div class="right">
-                <ul>
-                  <li>Lorem ipsum dolor sit.</li>
-                  <li>Lorem ipsum dolor sit.</li>
-                  <li>Lorem ipsum dolor sit.</li>
-                </ul>
-            </div>
+        <h2 class="lg-heading text-black about-heading">About Us</h2>
+        <p class="text-grey">
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatem
+          suscipit quas magni eos ipsam omnis voluptas voluptatum id, reiciendis
+          doloribus!
+        </p>
+        <div class="about-wrapper">
+          <div class="left">
+            <ul>
+              <li>Lorem ipsum dolor sit.</li>
+              <li>Lorem ipsum dolor sit.</li>
+              <li>Lorem ipsum dolor sit.</li>
+            </ul>
           </div>
+          <div class="right">
+            <ul>
+              <li>Lorem ipsum dolor sit.</li>
+              <li>Lorem ipsum dolor sit.</li>
+              <li>Lorem ipsum dolor sit.</li>
+            </ul>
+          </div>
+        </div>
 
-       <div class="counts">
-            <div class="count-item  count-item1"> <span>2500</span>
+        <div class="counts">
+          <div class="count-item count-item1">
+            <span>2500</span>
             <p>Travelled</p>
           </div>
 
-          <div class="count-item  count-item2">
-              <span>500</span>
-              <p>Places</p>
+          <div class="count-item count-item2">
+            <span>500</span>
+            <p>Places</p>
           </div>
 
-          <div class="count-item  count-item3">
-              <span>400</span>
-              <p>Guide</p>
+          <div class="count-item count-item3">
+            <span>400</span>
+            <p>Guide</p>
           </div>
 
-          <div class="count-item   count-item4">
-              <span>20</span>
-              <p>Sports</p>
+          <div class="count-item count-item4">
+            <span>20</span>
+            <p>Sports</p>
           </div>
-
-       </div>
-
-       <!-- banners  call to actions -->
-<div class="cta-banner">
-        <div class="cta-banner-left">
-          <p class="cta-line"> What are you waiting for,reach us right now</p>
-         </div>
-        <div class="cta-banner-right">
-          <a href="contact.html"  class="btn-cta">Contact Us</a>
         </div>
 
-</div>
-
+        <!-- banners  call to actions -->
+        <div class="cta-banner">
+          <div class="cta-banner-left">
+            <p class="cta-line">What are you waiting for,reach us right now</p>
+          </div>
+          <div class="cta-banner-right">
+            <a href="contact.html" class="btn-cta">Contact Us</a>
+          </div>
+        </div>
       </div>
     </section>
   </body>
