--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       </nav>
 
       <div class="header-content">
-        <h1 class="lg-heading text-light">Explore the world</h1>
+        <h1 class="lg-heading text-light main-heading">Explore the world</h1>
         <p class="text-light">
           Explore the world of your own eyes,explain it better. it's the best
           gift of nature
@@ -35,6 +35,7 @@
         >
       </div>
     </header>
+
     <section class="showcase" id="explore-places">
       <div class="container">
         <div class="row row1">
